# HierarchicalBayesianAtlasBuild

./: CMakeLists.txt  Copyright.txt  Installation.txt  Makefile  README.txt  cmake_install.cmake
Cxx/inc/Alg/: GeodesicShooting.h
Cxx/inc/Base/: FftOper.h
Cxx/src/: CMakeLists.txt
Cxx/src/Alg/: GeodesicShooting.cxx
Cxx/src/Base/: FftOper.cxx
Data/3Dbrain/: .mhd  10_brain.mhd  11_brain.mhd  12_brain.mhd  13_brain.mhd  14_brain.mhd  15_brain.mhd  16_brain.mhd  17_brain.mhd  18_brain.mhd  19_brain.mhd  20_brain.mhd  21_brain.mhd  22_brain.mhd  254_brain.mhd  255_brain.mhd  256_brain.mhd  257_brain.mhd  258_brain.mhd  259_brain.mhd  260_brain.mhd  261_brain.mhd  262_brain.mhd  4_brain.mhd  5_brain.mhd  67_brain.mhd  68_brain.mhd  69_brain.mhd  6_brain.mhd  70_brain.mhd  71_brain.mhd  72_brain.mhd  73_brain.mhd  74_brain.mhd  75_brain.mhd  76_brain.mhd  77_brain.mhd  78_brain.mhd  79_brain.mhd  7_brain.mhd  (+11 more)
Testing/: AtlasBuildingTest  AtlasBuildingTest.cxx  CMakeLists.txt  DeformImageWithInitVelocity  DeformImageWithInitVelocity.cxx  ImageMatchingTest  ImageMatchingTest.cxx  Makefile  cmake_install.cmake
Testing/runAtlasBuilding/: run.sh  run.sh~
Testing/runImageMatching/: runImageMatching.sh  runImageMatching2.sh
